<resources>
    <string name="app_name">booksmeals</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_discover">Discover</string>
    <string name="title_map">Map</string>
    <string name="title_favorites">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="toolbar_title">Contacts</string>
    <string name="err_name">The name field is required.</string>
    <string name="err_email">The email must be a valid email address.</string>
    <string name="err_password">The password must be at least 6 characters.</string>
    <string name="edittext_hint"><font size="2">Description</font></string>
    <string name="change_photo_dialog">ChangePhotoDialog</string>


    <string name="facebook_app_id">712703319124797</string>
    <string name="fb_login_protocol_scheme">fb712703319124797</string>


    <string name="diagonallayout_description">Hugh Michael Jackman is an Australian actor, singer and producer. Jackman has won international recognition for playing different roles in various film genres. \n\nHe is best known for his long-running role as Wolverine in the X-Men film series, as well as for his lead roles in the romantic-comedy fantasy Kate &amp; Leopold (2001), the action-horror film Van Helsing (2004)...</string>

</resources>
