<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/navigation_discover"
    android:icon="@drawable/discover"
    android:title="@string/title_discover" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/magnify"
        android:title="@string/action_search" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />


    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/logout"
        android:iconTint="@color/black"
        android:title="@string/title_logout" />

    <!--
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:orderInCategory="100"
            android:title="search"
            app:showAsAction="always"
            app:actionViewClass="android.support.v7.widget.SearchView" />
    -->
</menu>